--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,3 +20,5 @@ flutter:
     platforms:
       ios:
         pluginClass: IcloudStoragePlugin
+      macos:
+        pluginClass: IcloudStoragePlugin
